footer image added

--- a/WebContent/index.xhtml
+++ b/WebContent/index.xhtml
@@ -129,6 +129,9 @@
 			</div>
 		</div>
 	</div>
+	  <div class="navbar navbar-default navbar-fixed-bottom" style="background-color: #6495ED;">
+  		<div class="navbar-fixed-bottomflg"  id="footerflag">  </div>
+  		</div>
 	<script
 		src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
