--- a/WebContent/question.xhtml
+++ b/WebContent/question.xhtml
@@ -5,7 +5,7 @@
 										   xmlns:ui="http://java.sun.com/jsf/facelets"
 										   xmlns:c="http://java.sun.com/jsp/jstl/core">
 <head>
-	<f:event listener="#{answers.init}" type="preRenderView" />
+	<f:event listener="#{questions.init}" type="preRenderView" />
     <link href="css/custom.css" rel="stylesheet"/>
    <title>Question Insertion</title>
 </head>
@@ -18,8 +18,8 @@
 				<h:inputText id="answers" value="#{answers.answer}"/>
 				<h:outputLabel for="answers" value="Answer Type:" />
 				
-				<h:selectOneMenu for="answers" value="#{answers.answerTypeId}">
-			        <f:selectItems value="#{answers.answeTypesMap.entrySet()}" var="answeTypesMap" 
+				<h:selectOneMenu for="questions" value="#{questions.answerTypeId}">
+			        <f:selectItems value="#{questions.answeTypesMap.entrySet()}" var="answeTypesMap" 
 			        itemValue="#{answeTypesMap.key}" itemLabel="#{answeTypesMap.value}" />
 			    </h:selectOneMenu>
 				
