--- a/WebContent/exampaper.xhtml
+++ b/WebContent/exampaper.xhtml
@@ -8,6 +8,7 @@
 	xmlns:p="http://primefaces.org/ui">
 
 <h:head>
+	<f:event listener="#{ExamPaperGenerator.init}" type="preRenderView" />
 </h:head>
 <h:body>
 	<h:form>
