--- a/WebContent/TopicType.xhtml
+++ b/WebContent/TopicType.xhtml
@@ -1,19 +1,32 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://java.sun.com/jsf/html" 
-										   xmlns:f="http://java.sun.com/jsf/core"
-										   xmlns:ui="http://java.sun.com/jsf/facelets">
-<head>
-    <link href="css/custom.css" rel="stylesheet"/>
-   <title>Topic Type Insertion</title>
-</head>
-<body>
-		<div class="main-login main-center">
+"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:h="http://java.sun.com/jsf/html"
+	xmlns:f="http://java.sun.com/jsf/core"
+	xmlns:ui="http://java.sun.com/jsf/facelets"
+	xmlns:p="http://primefaces.org/ui">
+
+<h:head>
+<f:event listener="#{topicTypes.init}" type="preRenderView" />
+</h:head>
+<h:body>
 			<h:form>
 				<h:outputLabel for="topicTypes" value="Topic Type:" />
 				<h:inputText name="topicTypes" value="#{topicTypes.topicType}" id="topicTypesName" />
 	        	<h:commandButton action="#{topicTypes.setTopicType}" value="Insert" />
-			</h:form>
-		</div>
-</body>
+
+				<p:dataTable var="topic" value="#{topicTypes.listOfTopicTypes}">
+				    <p:column headerText="Topic Type Id">
+				        <h:outputText value="#{topic.topicTypeId}" />
+				    </p:column>
+				 
+				    <p:column headerText="Topic Type">
+				        <h:outputText value="#{topic.topicType}" />
+				    </p:column>
+				 
+				</p:dataTable>
+
+	</h:form>
+</h:body>
 </html>
